--- a/src/app/footer/footer/footer.component.html
+++ b/src/app/footer/footer/footer.component.html
@@ -23,7 +23,7 @@
                 </ul>
             </div>
             <div class="col-md-4">
-                <p class="company"><a routerLink="Scraprate">Scrap Rates</a></p>
+                <p class="company"><a routerLink="../Scraprate">Scrap Rates</a></p>
                 <!-- <p class="cursor-pointer"><a href="https://blog.scrapuncle.com" target="_blank"
                         rel="noreferrer">Blog</a></p> -->
             </div>
